# flippy

./: .gitignore  LICENSE  README.Rmd  README.md  setup.cfg  setup.py
Python/: pvalue.py  tests.Rmd
articles/: tests.Rmd
flippy/: __init__.py  new_inferred_param.py  plausibility_class.py  pvalue.py  tests.Rmd  two-sample-stats.py  two_sample_stats.py  two_sample_test.py  utils.py
