[metadata]
name = flippy
version = 0.0.0.9000
author = Aymeric Stamm
author_email = aymeric.stamm@math.cnrs.fr
description = A flexible permutation framework for making
    inference such as point estimation, confidence
    intervals or hypothesis testing, on any kind of data,
    be it univariate, multivariate, or more complex such
    as network-valued data, topological data, functional
    data or density-valued data.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://astamm.github.io/flippy/
project_urls =
    Bug Tracker = https://github.com/astamm/flippy/issues/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = flippy
packages = find:
python_requires = >=3.6

[options.packages.find]
where = flippy
